Mantis 0002596 : oeil à la place du crayon dans la liste des classerus supprimés

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/liste_retired.html.twig
@@ -96,7 +96,7 @@
                     sClass: "center",
                     bSortable: false,
                     "mRender": function (data, type, full) {
-                        return '<a class="act" data-id="' + data + '" href="' + Routing.generate('classeur_edit', {id: data}) + '"><span class="glyphicon glyphicon-pencil" title="Editer le document"></span></a>';
+                        return '<a class="act" data-id="' + data + '" href="' + Routing.generate('classeur_edit', {id: data}) + '"><span class="glyphicon glyphicon-eye-open" title="Editer le document"></span></a>';
                     }
                 },
                 {
