--- a/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Collectivite/new.html.twig
@@ -61,51 +61,77 @@
                 </div>
                 {{ form_label(form.message) }}
                 {{ form_widget(form.message) }}
-                <br>
-                <br>
             </div>
+
+
+            <!-- Visa -->
             <div class="tab-pane fade" id="visa">
-                <br>
-                <label class="underline">Disposition du cartouche visa</label>
-                <br><br>
-                {{ form_widget(form.couleurVisa) }}
-                <div class="row">
-                    <div class="col-md-3">
-                        <label for="colorPicker">Couleur</label>
+
+                <div class="row row-padding">
+                    <div class="col-md-12">
+                        <label>Disposition du cartouche visa</label>
                     </div>
-                        <div class="bfh-colorpicker col-md-3" id="colorPicker" data-name="colorpicker1" data-color="#454545" style="z-index: 1000">
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="row row-padding">
+                            <div class="col-md-3">
+                                <label for="colorPicker">{{ form_label(form.couleurVisa) }}</label>
+                            </div>
+                            <div class="col-md-9">
+                                {{ form_widget(form.couleurVisa) }}
+                                <div class="bfh-colorpicker col-md-6" id="colorPicker" data-name="colorpicker1" data-color="{{ form.couleurVisa.vars.value }}"></div>
+                            </div>
                         </div>
-                </div>
-                <br>
-                <label class="underline">Texte</label>
-                <br><br>
-                <div class="row">
-                    <div class="col-md-3">{{ form_label(form.titreVisa) }}</div>
-                    <div class="col-md-9">{{ form_widget(form.titreVisa) }}</div>
-                </div>
-
-                <br>
-                <br>
-                <label class="underline">Emplacement</label>
-                <div class="row">
-
-                    <div class="col-md-3"></div>
-                    <div class="col-md-9">
-                        <div id="containment"></div>
+                        <div class="row row-padding">
+                            <div class="col-md-3">{{ form_label(form.titreVisa) }}</div>
+                            <div class="col-md-9">{{ form_widget(form.titreVisa, {'attr': {'class': 'col-md-6'} }) }}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row row-padding">
+                            <div class="col-md-12">
+                                <label>Emplacement du visa</label>
+                                <div id="containment"></div>
+                                {# Input hidden #}
+                                {{ form_widget(form.abscissesVisa) }}
+                                {{ form_widget(form.ordonneesVisa) }}
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
 
+
+            <!-- Signature -->
             <div class="tab-pane fade" id="signature">
-                <br>
-                <label class="underline">Disposition de la signature</label>
-                <br><br>
-                <div class="row">
-                    <div class="col-md-3">{{ form_label(form.pageSignature) }}</div>
-                    <div class="col-md-9">{{ form_widget(form.pageSignature) }}</div>
+                <div class="row row-padding">
+                    <div class="col-md-12"><label>Disposition de la signature</label></div>
                 </div>
-                <br>
-                <br>
+
+                <div class="row row-padding">
+                    <div class="col-md-6">
+                        <div class="row row-padding">
+                            <div class="col-md-3">{{ form_label(form.pageSignature) }}</div>
+                            <div class="col-md-3">{{ form_widget(form.pageSignature, {'attr': {'class': 'col-md-12'} }) }}</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row row-padding">
+                            <div class="col-md-12">
+                                <label>Emplacement de la signature</label>
+                                <div id="containmentSignature"></div>
+                                {# Input hidden #}
+                                {{ form_widget(form.abscissesSignature) }}
+                                {{ form_widget(form.ordonneesSignature) }}
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
         </div>
 
@@ -133,18 +159,53 @@
     <script src="{{ asset("/bootstrap3-wysihtml5/src/locales/bootstrap-wysihtml5.fr-FR.js") }}"></script>
     <script src="{{ asset("/js/drag.js") }}" type="text/javascript"></script>
     <script type="text/javascript">
-	$('textarea').wysihtml5({
-	    "image": false,
-	    locale: "fr-FR"
-	});
+        $('textarea').wysihtml5({
+            "image": false,
+            locale: "fr-FR"
+        });
         $('#colorPicker').on('change.bfhcolorpicker',function(){
-           $('#sesile_mainbundle_collectivite_couleurVisa').val($(this).val())
-            alert($('#sesile_mainbundle_collectivite_couleurVisa').val())
+            $('#sesile_mainbundle_collectivite_couleurVisa').val($(this).val());
         });
 
+
+        cVerticalPadding = 10;
+        cHorizontalPadding = 10;
+
         $('#containment').drag('init',{
-                cWidth:"210px",
-                cHeight:"297px"
+            cWidth:"210px",
+            cHeight:"297px",
+            cVerticalPadding:cVerticalPadding + "px",
+            cHorizontalPadding:cHorizontalPadding + "px",
+            dText: "VISA",
+            posX:{{ form.abscissesVisa.vars.value }},
+            posY:{{ form.ordonneesVisa.vars.value }}
+        });
+
+        $('#containmentSignature').drag('initSign',{
+            cWidth:"210px",
+            cHeight:"297px",
+            dWidth:"75px",
+            cVerticalPadding:cVerticalPadding + "px",
+            cHorizontalPadding:cHorizontalPadding + "px",
+            dText: "SIGNATURE",
+            posX:{{ form.abscissesSignature.vars.value }},
+            posY:{{ form.ordonneesSignature.vars.value }}
+        });
+
+        $("#containment .draggable").on('dragstop', function(event, ui) {
+
+            $('#sesile_mainbundle_collectivite_abscissesVisa').val(ui.position.left + cHorizontalPadding);
+            $('#sesile_mainbundle_collectivite_ordonneesVisa').val(ui.position.top + cVerticalPadding);
+
+            /*$('#sesile_mainbundle_collectivite_abscissesVisa').val($('#container').drag('getPosX'));
+             $('#sesile_mainbundle_collectivite_ordonneesVisa').val($('#container').drag('getPosY'));*/
+        });
+
+        $("#containmentSignature .draggable").on('dragstop', function(event, ui) {
+
+            $('#sesile_mainbundle_collectivite_abscissesSignature').val(ui.position.left + cHorizontalPadding);
+            $('#sesile_mainbundle_collectivite_ordonneesSignature').val(ui.position.top + cVerticalPadding);
+
         });
 
     </script>
