--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -72,7 +72,7 @@
 //            myDropzone.removeFile(file);
             dropzone.removeFile(file);
             $("#documentcontent").children("#" + file.idfilename).remove();
-            console.log("#" + file.idfilename);
+//            console.log("#" + file.idfilename);
             $('#Mybutton').attr('disabled', false);
             if (dropzone.getAcceptedFiles().length == 0) {
                 $('#Mybutton').attr('disabled', true);
@@ -80,6 +80,11 @@
 
         });
 
+    });
+
+    dropzone.on("maxfilesexceeded", function(file) {
+        this.removeFile(file);
+        alert ('Dans le cas d\'un classeur de type Hélios le dépôt d\'un seul fichier par classeur est autorisé.');
     });
 
 
@@ -124,43 +129,29 @@
 
 
             if (file.type == "application/pdf") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PDF/icon_pdf_256.png') }}");
-
             }
             if (file.type == "application/msword" || file.type == "application/vnd.openxmlformats-officedocument.wordprocessingml.document") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/WORD/icon_doc_256.png') }}");
-
             }
 
             if (file.type == "application/zip") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/ZIP/icon_zip_256.png') }}");
-
             }
 
             if (file.type == "image/png") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PNG/icon_png_256.png') }}");
-
             }
             if (file.type == "image/png") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/PNG/icon_png_256.png') }}");
-
             }
 
             if (file.type == "image/jpeg") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/JPG/icon_jpg_256.png') }}");
-
             }
 
             if (file.type == "text/xml") {
-
                 $(this).attr("src", "{{ asset('bundles/sesiledocument/img/ICONS/XML/icon_xml_256.png') }}");
-
             }
 
             if (file.type == "application/vnd.ms-excel" || file.type == "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet") {
