Mantis 0002714 : Etapes de signature

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/sign.html.twig
@@ -155,42 +155,42 @@
 
     <div class="row">
         <div class="col-md-12"><h3>Etapes de validations</h3></div>
-        <div class="col-md-6">
+        <div class="col-md-4">
             {#<ul class="etape_progress">
             </ul>#}
 
             <ul class="etape_progress">
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 1 : Chargement...
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 1 :</strong> Chargement...
                 </li>
                 <li>
                     <span class="glyphicon glyphicon-arrow-right"> </span>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 2 : Prêt à signer
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 2 :</strong> Prêt à signer
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 3 : Chargement du fichier...
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 3 :</strong> Chargement du fichier...
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 4 : Fichier téléchargé !
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 4 :</strong> Fichier téléchargé !
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 5 : Signature du fichier
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 5 :</strong> Signature du fichier
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 6 : Fichier Signé
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 6 :</strong> Fichier Signé
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 7 : Envoi du fichier...
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 7 :</strong> Envoi du fichier...
                 </li>
                 <li>
                     <img class="loadinggif" src="{{ asset("/bundles/sesilemain/img/load.gif") }}"/>
-                    <span class="glyphicon glyphicon-ok"> </span> Etape 8 : Terminé ! Validation du classeur...
+                    <span class="glyphicon glyphicon-ok"> </span> <strong>Etape 8 :</strong> Terminé ! Validation du classeur...
                 </li>
             </ul>
 
