--- a/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/new.html.twig
@@ -26,6 +26,8 @@
             '</div>',
             maxFiles: 1,
             dictMaxFilesExceeded: "Dans le cas d'un classeur de type Hélios le dépôt d'un seul fichier par classeur est autorisé.",
+            maxFilesize: 20,
+            dictFileTooBig: "Dans le cas d'un classeur de type Hélios le fichier ne peut dépasser les 20 Mo.",
             acceptedFiles: ".xml",
             dictInvalidFileType: "Attention, seuls les fichiers xml sont acceptés"
 
