--- a/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/edit.html.twig
@@ -91,10 +91,10 @@
                 {{ form_widget(edit_form.file, { 'attr': {'class': 'parc_avatar'} }) }}
             </div>
 
-            {#{% if entity.getWebPath() %}#}
-            {% if app.user.path %}
+            {% if entity.path %}
                 {#<img src="{{ asset(entity.getWebPath()) }}" class="col-md-3" />#}
-                <img class="col-md-3" src="{{ asset(upload_path ~ app.user.path) }}"/>
+                {#<img class="col-md-3" src="{{ asset(upload_path ~ app.user.path) }}"/>#}
+                <img class="col-md-3" src="{{ asset(upload_path ~ entity.path) }}"/>
             {% endif %}
         </div>
 
@@ -119,8 +119,9 @@
                 {{ form_widget(edit_form.fileSignature, { 'attr': {'class': 'parc_avatar'} }) }}
             </div>
 
-            {% if app.user.getPathSignature %}
-                <img src="{{ asset(upload_path_signatures ~ app.user.getPathSignature) }}" class="col-md-6" />
+            {#{% if app.user.getPathSignature %}#}
+            {% if entity.pathSignature %}
+                <img src="{{ asset(upload_path_signatures ~ entity.pathSignature) }}" class="col-md-6" />
             {% endif %}
         </div>
         <script type="text/javascript">
