Bug User Signature Mantis 0002713: Ne pas autoriser une connexion si le compte utilisateur n'est déclaré dans SESILE

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -928,3 +928,12 @@ select [name=user] {
     margin-left: -15px;
     margin-right: -15px;
 }
+
+
+.dropzone .dz-preview, .dropzone-previews .dz-preview {
+    cursor: pointer;
+}
+
+#containment, #containmentSignature {
+    margin: 0 auto;
+}
