--- a/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/show.html.twig
@@ -1,6 +1,6 @@
 <div class="row descriptionfichier">
 
-<div class="col-md-5">
+<div class="col-md-6">
     <div class="thumbnail">
         <img id="fileimgpreview" style="width: 180px; height: 180px">
 
@@ -71,8 +71,21 @@
                                     {# Si le classeur est validé seuelement on peut accéder aux options de téléchargements du visa et de la signature #}
                                     {% if doc.classeur.status == 2 %}
                                         <li><a href="{{ path('download_doc_visa', {'id':doc.id}) }}/{{ abscissesVisa }}/{{ ordonneesVisa }}" target="_blank" id="visaLink">Télécharger visa</a></li>
-                                        <li {% if signature is null %}class="disabled"{% endif %}><a href="{{ path('download_doc_sign', {'id':doc.id}) }}/{{ abscissesSignature }}/{{ ordonneesSignature }}" target="_blank" id="signLink">Télécharger signature</a></li>
-                                        <li {% if signature is null %}class="disabled"{% endif %}><a href="{{ path('download_doc_all', {'id':doc.id}) }}/{{ abscissesVisa }}/{{ ordonneesVisa }}/{{ abscissesSignature }}/{{ ordonneesSignature }}" target="_blank" id="visaSignLink">Télécharger visa + signature</a></li>
+                                        <li {% if signature is null %}class="disabled"{% endif %}>
+                                            {% if signature is null %}
+                                                <a href="#" id="signLink">Télécharger signature</a>
+                                            {% else %}
+                                                <a href="{{ path('download_doc_sign', {'id':doc.id}) }}/{{ abscissesSignature }}/{{ ordonneesSignature }}" target="_blank" id="signLink">Télécharger signature</a>
+                                            {% endif %}
+                                        </li>
+                                        <li {% if signature is null %}class="disabled"{% endif %}>
+                                            {% if signature is null %}
+                                                <a href="#" id="signLink">Télécharger visa + signature</a>
+                                            {% else %}
+                                                <a href="{{ path('download_doc_all', {'id':doc.id}) }}/{{ abscissesVisa }}/{{ ordonneesVisa }}/{{ abscissesSignature }}/{{ ordonneesSignature }}" target="_blank" id="visaSignLink">Télécharger visa + signature</a>
+                                            {% endif %}
+
+                                        </li>
                                     {% endif %}
                                 </ul>
                             </div>
@@ -82,7 +95,7 @@
                 {# Si le classeur est validé seuelement on peut accéder aux options de téléchargements du visa et de la signature #}
                 {% if doc.classeur.status == 2 %}
                     <div class="row">
-                        <div class="col-md-6 text-left">
+                        <div class="col-lg-6 col-md-12 text-center">
                             <label>Emplacement du visa</label>
                             {#<img src="data:image/jpg;base64,{{ doc.getPDFImage }}">#}
                             <input type="hidden" id="absVisa" value="{{ abscissesVisa }}" />
@@ -93,7 +106,7 @@
                         </div>
 
                         {% if signature is not null %}
-                        <div class="col-md-6 text-left">
+                        <div class="col-lg-6 col-md-12 text-center">
                             <label>Emplacement de la signature</label>
                             <div id="containmentSignature"></div>
                         </div>
@@ -196,7 +209,7 @@
     </div>
 </div>
 
-<div class="col-md-7">
+<div class="col-md-6">
     <h4>Historique</h4>
 
     {% if doc is null %}
